6, 7.1, 7.2 endpoints created