@@ -1,7 +1,6 @@
 package tech.rowi.dbo.claimapi.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -9,10 +8,7 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import tech.rowi.dbo.claimapi.dto.ClaimSpecifications;
 import tech.rowi.dbo.claimapi.dto.reference.StatusesEnum;
-import tech.rowi.dbo.claimapi.dto.request.ClaimFilterRequest;
-import tech.rowi.dbo.claimapi.dto.request.ClaimPostRequest;
-import tech.rowi.dbo.claimapi.dto.request.ClaimUpdateRequest;
-import tech.rowi.dbo.claimapi.dto.request.DocumentRequest;
+import tech.rowi.dbo.claimapi.dto.request.*;
 import tech.rowi.dbo.claimapi.mapper.RequestMapper;
 import tech.rowi.dbo.claimapi.model.Claim;
 import tech.rowi.dbo.claimapi.model.Client;
@@ -22,7 +18,6 @@ import tech.rowi.dbo.claimapi.util.TokenUtil;
 
 import java.io.FileNotFoundException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -96,7 +91,7 @@ public class ClaimService {
         claim.setAssignee(claimUpdateRequest.getAssignee());
         claim.setComment(claimUpdateRequest.getComment());
 
-        List<DocumentRequest> documentRequests = Arrays.asList(claimUpdateRequest.getDocuments());
+        List<DocumentRequest> documentRequests = List.of(claimUpdateRequest.getDocuments());
         List<Document> documents = new ArrayList<>();
 
         for(DocumentRequest docReq: documentRequests){
@@ -105,8 +100,42 @@ public class ClaimService {
 
         repo.save(claim);
         documentService.saveAll(documents);
-
+        //statusHistory Create
         return claim.getId();
     }
 
+
+    //6
+    public Long assignClaim(Long id) throws FileNotFoundException {
+        Claim claim = repo.findById(id).orElseThrow(()-> new FileNotFoundException("File not found"));
+        if (!(claim.getAssignee() == null)) throw new IllegalArgumentException("Assignee already exists");
+        claim.setAssignee(tokenUtil.getUsername());
+        claim.setStatus(StatusesEnum.IN_PROGRESS);
+        repo.save(claim);
+        //statusHistory Create
+        return claim.getId();
+    }
+
+    //7.1
+    public Long reassignClaim(String assignee, Long id) throws FileNotFoundException {
+        Claim claim = repo.findById(id).orElseThrow(()-> new FileNotFoundException("File not found"));
+        if (claim.getAssignee() == null) throw new IllegalArgumentException("We cannot reassign the claim as it is not assigned to anyone");
+        claim.setAssignee(assignee);
+        claim.setStatus(StatusesEnum.IN_PROGRESS);
+        repo.save(claim);
+        //statusHistory Create
+        return claim.getId();
+    }
+
+    //7.2
+    public Long forwardClaim(ClaimForwardRequest claimForwardRequest, Long id) throws FileNotFoundException {
+        Claim claim = repo.findById(id).orElseThrow(()-> new FileNotFoundException("File not found"));
+        if (claim.getAssignee() == null) throw new IllegalArgumentException("We cannot reassign the claim as it is not assigned to anyone");
+        claim.setAssignee(claimForwardRequest.getAssignee().getCode());
+        claim.setStatus(StatusesEnum.DONE); // Просят сделать CLOSED, возможно новый Enum
+        claim.setComment(claimForwardRequest.getComment());
+        repo.save(claim);
+        //statusHistory Create
+        return claim.getId();
+    }
 }
